--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,13 @@
 }
 
 .header{
-    background-color: #18122B;
+    background-color: #0a192f;
+    background-image: url("https://www.transparenttextures.com/patterns/black-thread.png");
+
+}
+
+.navbar{
+    background-color: #0a192f !important;
 }
 
 .content{
@@ -14,22 +20,15 @@
     color: white;
 }
 
-
-
-body{
-    text-align: center;
-    margin: auto;
-    background-color: white;
-}
-
-
 .message-box{
+    position:relative;
     color:white;
     margin: 100px 0 0 600px;
     height: 100px;
     width: 300px;
     padding: 10px;
     border-style: solid;
+    border-color: #64ffda;
     border-width: 3px;
     box-shadow: 
     10px -10px 0 -3px black,
@@ -39,7 +38,14 @@ body{
     transition: box-shadow 0.5s, top 0.5s, left 0.5s;
     top: 0;
     left: 0;
+    }
+
+@media screen and (max-width: 23px) {
+    .message-box{
+        display: none;
+    }
 }
+
 
 
 .message-box:hover{
@@ -52,10 +58,87 @@ body{
     0 0,
     0 0 0 -3px black,
     0 0;
-    
 }
 
 
-h2,p{
-    color: #00000;
+
+.about{
+    margin: 0 0 0 0;
+    background-color: #0a192f;
+    color:white;
+    height: 200px;
+    border-style: solid;
+    border-color: #0a192f;
+    border-top-color: #64ffda;
+}
+
+.about >p{
+    margin-bottom:0 !important;  
+    padding: 0;
+}
+
+
+/* .carousel{
+    height: 250px;
+}
+
+.carousel-control-prev{
+    padding-top: 450px !important;
+}
+
+.carousel-control-next{
+    padding-top: 445px !important;
+} */
+
+
+.body>.card{
+    height: 400px;
+    width:400px;
+    padding: 40px;
+    background-color: #0a192f;
+    color: white;
+    border-style: solid;
+    border-color:#64ffda;
+}
+
+.card > img{
+    border-style: solid;
+    border-color: #64ffda;
+}
+
+
+
+.display{
+    border-style: solid;
+    border-top-color: #64ffda;
+    background-color: #0a192f;
+    padding: 50px;
+}
+
+/* button{
+    padding:10px !important;
+} */
+
+
+h3{
+    background-color: #0a192f;
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.contact{
+    background-color: #0a192f;
+    color: white; 
+    padding: 30px;
+    border-style: solid;
+    border-color: #0a192f;
+}
+/* input{
+    width
+} */
+
+
+.contact{
+    border-style: solid;
+    border-top-color: #64ffda;
 }
