--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,16 @@
+html{
+    scroll-behavior: smooth;
+}
+
 *{
     font-family: 'Chivo Mono', monospace;
 }
 
 .header{
     background-color: #0a192f;
-    background-image: url("https://www.transparenttextures.com/patterns/black-thread.png");
+    /* background-image: url("https://www.transparenttextures.com/patterns/black-thread.png"); */
+    height: 100vh;
+    width: 100vw;
 
 }
 
@@ -40,11 +46,6 @@
     left: 0;
     }
 
-@media screen and (max-width: 23px) {
-    .message-box{
-        display: none;
-    }
-}
 
 
 
@@ -66,15 +67,19 @@
     margin: 0 0 0 0;
     background-color: #0a192f;
     color:white;
-    height: 200px;
     border-style: solid;
     border-color: #0a192f;
     border-top-color: #64ffda;
+    height: 100%;
+    width: 100vw;
 }
+
+
 
 .about >p{
     margin-bottom:0 !important;  
     padding: 0;
+    
 }
 
 
@@ -113,6 +118,8 @@
     border-top-color: #64ffda;
     background-color: #0a192f;
     padding: 50px;
+    height: 100vh;
+    width: 100vw;
 }
 
 /* button{
@@ -141,4 +148,28 @@ h3{
 .contact{
     border-style: solid;
     border-top-color: #64ffda;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a192f;
+}
+
+
+.icon{
+    height: 50px;
+    width: 50px;
+}
+
+
+.footer{
+    background-color: #0a192f;
+    height: 50px !important;
+}
+.foot{
+    color: white;
+    height: 20px;
+}
+
+.form{
+    border-style: solid;
+    border-color: #64ffda;
 }
