added typewriter effect

--- a/public/styles.css
+++ b/public/styles.css
@@ -18,12 +18,14 @@ html{
     background-color: #0a192f !important;
 }
 
+
 .content{
     height: 200px;
     width: 100%;
     margin-top: 100px;
     font-weight: 500 !important;
     color: white;
+    font-size: 30px;
 }
 
 .message-box{
