modified:   package-lock.json 	modified:   package.json 	modified:   src/components/App.jsx 	modified:   src/components/Body.jsx 	modified:   src/components/Navbar.jsx

--- a/public/styles.css
+++ b/public/styles.css
@@ -176,3 +176,15 @@ h3{
     border-style: solid;
     border-color: #64ffda;
 }
+
+/* .new{
+    height: 100vh;
+    width: 100vw;
+} */
+
+/* .resume{
+    border-style:solid;
+    border-color: #64ffda;
+    color: white;
+    margin-left: 1400px;
+} */
